--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,32 @@
-click==8.1.3
-Flask==2.2.3
-
-Jinja2==3.1.2
-MarkupSafe==2.1.2
-Werkzeug==2.2.3
+alembic==1.10.2
 async-timeout==4.0.2
 bidict==0.22.0
-
+blinker==1.6
+click==8.1.3
 Deprecated==1.2.13
 dnspython==2.2.1
 eventlet==0.33.0
-
+Flask==2.2.3
+Flask-Mail==0.9.1
+Flask-Migrate==4.0.4
+flask-redis==0.4.0
 Flask-SocketIO==5.1.1
+Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.0.0
 greenlet==1.1.2
 gunicorn==20.1.0
 itsdangerous==2.1.2
-
-
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.2
 packaging==21.3
 pyparsing==3.0.7
 python-engineio==4.3.1
 python-socketio==5.5.2
+redis==4.5.4
 six==1.16.0
-typing_extensions==4.1.1
-
+SQLAlchemy==2.0.8
+typing_extensions==4.5.0
+Werkzeug==2.2.3
 wrapt==1.14.0
 WTForms==3.0.1
