--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Deprecated==1.2.13
 dnspython==2.2.1
 eventlet==0.33.0
 Flask==2.2.3
+Flask-Login==0.6.2
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.4
 flask-redis==0.4.0
