--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.10.2
 async-timeout==4.0.2
+Babel==2.12.1
 bidict==0.22.0
 blinker==1.6
 click==8.1.3
@@ -7,10 +8,13 @@ Deprecated==1.2.13
 dnspython==2.2.1
 eventlet==0.33.0
 Flask==2.2.3
+Flask-BabelEx==0.9.4
 Flask-Login==0.6.2
 Flask-Mail==0.9.1
 Flask-Migrate==4.0.4
+Flask-Principal==0.4.0
 flask-redis==0.4.0
+Flask-Security==3.0.0
 Flask-SocketIO==5.1.1
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.0.0
@@ -21,11 +25,13 @@ Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
 packaging==21.3
+passlib==1.7.4
 pyparsing==3.0.7
 python-engineio==4.3.1
 python-socketio==5.5.2
 redis==4.5.4
 six==1.16.0
+speaklater==1.3
 SQLAlchemy==2.0.8
 typing_extensions==4.5.0
 Werkzeug==2.2.3
