--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ blinker==1.6
 click==8.1.3
 Deprecated==1.2.13
 dnspython==2.2.1
+email-validator==1.3.1
 eventlet==0.33.0
 Flask==2.2.3
 Flask-BabelEx==0.9.4
@@ -20,6 +21,7 @@ Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.0.0
 greenlet==1.1.2
 gunicorn==20.1.0
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
@@ -30,6 +32,7 @@ pyparsing==3.0.7
 python-engineio==4.3.1
 python-socketio==5.5.2
 redis==4.5.4
+shortuuid==1.0.11
 six==1.16.0
 speaklater==1.3
 SQLAlchemy==2.0.8
