--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ async-timeout==4.0.2
 Babel==2.12.1
 bidict==0.22.0
 blinker==1.6
+cachelib==0.10.2
 click==8.1.3
 Deprecated==1.2.13
 dnspython==2.2.1
@@ -16,6 +17,7 @@ Flask-Migrate==4.0.4
 Flask-Principal==0.4.0
 flask-redis==0.4.0
 Flask-Security==3.0.0
+Flask-Session==0.4.0
 Flask-SocketIO==5.1.1
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.0.0
